--- a/assets/index.css
+++ b/assets/index.css
@@ -9,27 +9,29 @@ body{
 .container{
     position: relative;
     background-color: rgba(42, 44, 56, 0.616);
-    width: 35%;
-    height: 450px;
+    width: 25%;
+    height: 500px;
     border-radius: 15px;
     top: 100px;
 }
 
 #first_count{
     position: relative;
-    background-color: rgba(50, 51, 59, 0.959);
+    background-color: rgba(25, 26, 34, 0.404);
     outline: none;
     border: none;
     font-size: 35px;
     text-align: center;
-    width: 15%;
-    padding-top: 15%;
-    padding-bottom: 15%;
+    width: 80%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     color: #02ff9e;
+    
     border-radius: 5px;
-    top: 20%;
-    border: solid #02ff9e 1px;
-    left: 5%;
+    top: 40%;
+   
+    left: 10%;
+
     z-index: 3;
 }
 
@@ -57,26 +59,48 @@ body{
 .selector{
     background-color: rgba(25, 26, 34, 0.404);
     border: none;
+    width: 100%;
     font-size: 15px;
-    padding: 10px;
+    margin-top: 20px;
+    padding: 20px;
     margin-left: 3%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+    font-weight: 500;
     border-radius: 5px;
     color: #02ff9e;
 }
 
 .slectors{
     position: relative;
-    top: -35%;
-    width: 50%;
+    top: 30%;
+    width: 80%;
     left: 10%;
 }
 
 .calculation{
+    position: relative;
     background-color: rgba(42, 44, 56, 0.616);
     border-radius: 5px;
     font-size: 25px;
     text-align: center;
     color: #02ff9e;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 15px;
+    padding: 20px;
+    top: 55%;
 }
+
+@media(max-width: 950px) {
+  .container{
+    width: 90%;
+    height: 300px;
+  }
+  .slectors{
+    width: 80%;
+    top: -1%;
+  }
+  #first_count{
+    top: 5%;
+  }
+  }
+  
